# k53certbot

./: .gitignore  DEVELOP.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  pipelines.yml  pyproject.toml  setup.py
examples/: ingress.kubectl.yaml  k53certbot.kubectl.yaml
k53certbot/: api.py  cli.py  version.py
k53certbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py
